--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               Разрабатываю сайты для малого и среднего бизнеса. У меня можно заказать дизайн и верстку небольшого сайта
               или интернет-магазина
             </p>
-            <button class="button hero-button">Бесплатная консультация</button>
+            <button type="button" class="button hero-button">Бесплатная консультация</button>
           </div>
           <div class="hero-avatar">
             <!-- <img src="images\avatar.jpg" alt="avatar" /> -->
@@ -49,32 +49,40 @@
           <h2 class="section-title">Со мной удобно работать</h2>
           <div class="features-block">
             <div class="features-item">
-              <img src="/images/features/offer-img.svg" alt="По договору" class="features-image">
+              <img src="/images/features/offer-img.svg" alt="По договору" class="features-image" />
               <h3 class="features-title">По договору</h3>
-              <p class="features-text">Предоставлю все документы для бухгалтерии: договоры, счета и акты. Работаю как ИП без НДС.</p>
+              <p class="features-text">
+                Предоставлю все документы для бухгалтерии: договоры, счета и акты. Работаю как ИП без НДС.
+              </p>
             </div>
             <div class="features-item">
-              <img src="/images/features/deadline-img.svg" alt="Точно в срок" class="features-image">
+              <img src="/images/features/deadline-img.svg" alt="Точно в срок" class="features-image" />
               <h3 class="features-title">Точно в срок</h3>
-              <p class="features-text">В договоре прописана моя  ответственность за срок проекта. Если просрочу — плачу неустойку. </p>
+              <p class="features-text">
+                В договоре прописана моя ответственность за срок проекта. Если просрочу — плачу неустойку.
+              </p>
             </div>
             <div class="features-item">
-              <img src="/images/features/agreement-img.svg" alt="Ценник под вас" class="features-image">
+              <img src="/images/features/agreement-img.svg" alt="Ценник под вас" class="features-image" />
               <h3 class="features-title">Ценник под вас</h3>
-              <p class="features-text">Если у вас нетиповой проект, сделаю рассчет цены за работу и объясню, как складывается цена.</p>
+              <p class="features-text">
+                Если у вас нетиповой проект, сделаю рассчет цены за работу и объясню, как складывается цена.
+              </p>
             </div>
             <div class="features-item">
-              <img src="/images/features/steps-img.svg" alt="Премежуточные итоги" class="features-image">
+              <img src="/images/features/steps-img.svg" alt="Премежуточные итоги" class="features-image" />
               <h3 class="features-title">Премежуточные итоги</h3>
-              <p class="features-text">Показываю работу поэтапно, а не  в последий момент перед  крайним сроком. </p>
+              <p class="features-text">Показываю работу поэтапно, а не  в последий момент перед  крайним сроком.</p>
             </div>
             <div class="features-item">
-              <img src="/images/features/storage-img.svg" alt="Хостинг и домен " class="features-image">
+              <img src="/images/features/storage-img.svg" alt="Хостинг и домен " class="features-image" />
               <h3 class="features-title">Хостинг и домен</h3>
-              <p class="features-text">Если мы договорились о цене проекта, в неё входит всё: домен и хостинг на год + SSL сертификат.</p>
+              <p class="features-text">
+                Если мы договорились о цене проекта, в неё входит всё: домен и хостинг на год + SSL сертификат.
+              </p>
             </div>
             <div class="features-item">
-              <img src="/images/features/conversation-img.svg" alt="Не брошу после сдачи" class="features-image">
+              <img src="/images/features/conversation-img.svg" alt="Не брошу после сдачи" class="features-image" />
               <h3 class="features-title">Не брошу после сдачи</h3>
               <p class="features-text">Научу вас или вашего сотрудника пользоваться сайтом, запишу видео-инструкции.</p>
             </div>
@@ -82,5 +90,43 @@
         </div>
       </section>
     </main>
+
+    <footer class="section">
+      <div class="container">
+        <h2 class="section-title">Свяжитесь со мной</h2>
+        <div class="contacts-block">
+          <form action="#" class="contacts-form">
+            <h4 class="contacts-title">Можете просто оставить заявку, я позвоню вам сегодня</h4>
+            <input type="text" class="input input-user" placeholder="Ваше имя" />
+            <input type="text" class="input input-phone" placeholder="Ваш телефон" />
+            <button type="submit" class="button form-button">Бесплатная консультация</button>
+          </form>
+          <div class="contacts-text">
+            <div class="contacts-data">
+              <div class="contacts-phone">
+                <h4 class="contacts-title">Телефон</h4>
+                <a href="tel: +777777777777">+7 777 777-77-77</a>
+              </div>
+              <div class="contacts-mail">
+                <h4 class="contacts-title">Почта</h4>
+                <a href="email: aa@aa.com">aa@aa.com</a>
+              </div>
+              <div class="contacts-social">
+                <h4 class="contacts-title">Соцсети</h4>
+                a*3.
+              </div>
+
+            </div>
+            <div class="social-links">
+              <a href="https://github.com/shvadim"><img src="images\social\github.svg" alt="github" /></a>
+              <a href="https://github.com/shvadim"><img src="images\social\facebook.svg" alt="facebook" /></a>
+              <a href="https://github.com/shvadim"><img src="images\social\instagram.svg" alt="instagram" /></a>
+              <a href="https://github.com/shvadim"><img src="images\social\twitter.svg" alt="twitter" /></a>
+            </div>
+            <h4 class="contacts-text_title">Политика конфиденциальности</h4>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
